manifests/ingress/public-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "default-public"
spec:
  selector:
    name: default-public
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "default-public"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/load-balancer-attributes: "routing.http2.enabled=true,idle_timeout.timeout_seconds=600,deletion_protection.enabled=false"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:account_id:certificate/000000-000a-000d-0000-00000000e
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/security-groups: sg-00000000000000
    alb.ingress.kubernetes.io/healthcheck-path: "/health-check/myapp-health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "default-public"
              servicePort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: default-public
  labels:
    name: default-public
spec:
  containers:
    - image: nginx:alpine
      name: default-public
